--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,26 @@ dependencies:
   flutter:
     sdk: flutter
 
+  supabase_flutter: ^1.7.0
+  shared_preferences: ^2.1.0
+  easy_localization: ^3.0.1
+
+
+  # hide password from ui
+  flutter_dotenv: ^5.0.2
+
+  # state management
+  provider: ^6.0.5
+  get_it: ^7.2.0
+
+  # IMAGE
+  cached_network_image: ^3.2.3
+  image_picker: ^0.8.7+4
+
+  # CONNECTIVITY
+  http: ^0.13.5
+  connectivity_plus: ^3.0.4
+  url_launcher: ^6.1.10
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -46,23 +66,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.1
-  supabase_flutter: ^1.7.0
-  shared_preferences: ^2.1.0
 
-  # hide password from ui
-  flutter_dotenv: ^5.0.2
-
-  # state management
-  provider: ^6.0.5
-  get_it: ^7.2.0
-
-  # IMAGE
-  cached_network_image: ^3.2.3
-
-  # CONNECTIVITY
-  http: ^0.13.5
-  connectivity_plus: ^3.0.4
-  url_launcher: ^6.1.10
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -78,6 +82,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - .env
+    - images/
+    - languages/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
