--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,7 +83,10 @@ flutter:
   assets:
     - .env
     - images/
-    - languages/
+    - images/icons/
+    - images/flag/
+    - images/tdm/
+    - assets/translations/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
