--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ flutter:
     - images/
     - images/icons/
     - images/flag/
+    - images/avatar/
     - images/tdm/
     - assets/translations/
 
