--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   # IMAGE
   cached_network_image: ^3.2.3
   image_picker: ^0.8.7+4
+  file_picker: ^5.2.11
 
   # CONNECTIVITY
   http: ^0.13.6
